syntax = "proto3";
package service;
option go_package=".;echo";

message EchoRequest {
}

message EchoResponse {
    bool ok = 1;
}

service EchoService{
    rpc Echo(EchoRequest) returns (EchoResponse) {};
}
